Trigger deployment with secrets verification

--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="es" style="scroll-behavior: smooth;">
-
+﻿<!DOCTYPE html>`n<html lang="es">`n<!-- Deployed via GitHub Actions -->`n<head>`n
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEMHYS - Ingeniería Sostenible Global</title>
+    <title>SEMHYS - IngenierÃ­a Sostenible Global</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -476,10 +474,10 @@
             </a>
             <div class="lang-selector">
                 <select id="languageSelect" onchange="changeLanguage()">
-                    <option value="es">Español</option>
+                    <option value="es">EspaÃ±ol</option>
                     <option value="en">English</option>
-                    <option value="pt">Português</option>
-                    <option value="fr">Français</option>
+                    <option value="pt">PortuguÃªs</option>
+                    <option value="fr">FranÃ§ais</option>
                 </select>
             </div>
         </div>
@@ -487,8 +485,8 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1 data-i18n="hero_title">Ingeniería Sostenible Global</h1>
-            <p data-i18n="hero_desc">Soluciones avanzadas en hidráulica, tratamiento de agua y eficiencia energética
+            <h1 data-i18n="hero_title">IngenierÃ­a Sostenible Global</h1>
+            <p data-i18n="hero_desc">Soluciones avanzadas en hidrÃ¡ulica, tratamiento de agua y eficiencia energÃ©tica
                 industrial.</p>
             <a href="#services" class="btn" data-i18n="hero_cta">Explorar Soluciones</a>
         </div>
@@ -503,23 +501,23 @@
             <div class="services-grid">
                 <a href="hydraulics.html" class="service-card"
                     style="display: block; text-decoration: none; color: inherit;">
-                    <div class="service-icon">💧</div>
-                    <h3 data-i18n="srv_1_title">Hidráulica Avanzada</h3>
-                    <p data-i18n="srv_1_desc">Diseño, mantenimiento y optimización de sistemas de bombeo de alta
-                        presión.</p>
+                    <div class="service-icon">ðŸ’§</div>
+                    <h3 data-i18n="srv_1_title">HidrÃ¡ulica Avanzada</h3>
+                    <p data-i18n="srv_1_desc">DiseÃ±o, mantenimiento y optimizaciÃ³n de sistemas de bombeo de alta
+                        presiÃ³n.</p>
                 </a>
                 <a href="water.html" class="service-card"
                     style="display: block; text-decoration: none; color: inherit;">
-                    <div class="service-icon">♻️</div>
+                    <div class="service-icon">â™»ï¸</div>
                     <h3 data-i18n="srv_2_title">Tratamiento de Agua</h3>
-                    <p data-i18n="srv_2_desc">Plantas de tratamiento (PTAR), gestión de lodos y recuperación de
+                    <p data-i18n="srv_2_desc">Plantas de tratamiento (PTAR), gestiÃ³n de lodos y recuperaciÃ³n de
                         recursos.</p>
                 </a>
                 <a href="energy.html" class="service-card"
                     style="display: block; text-decoration: none; color: inherit;">
-                    <div class="service-icon">⚡</div>
-                    <h3 data-i18n="srv_3_title">Eficiencia Energética</h3>
-                    <p data-i18n="srv_3_desc">Auditorías y modernización de tableros eléctricos para reducción de
+                    <div class="service-icon">âš¡</div>
+                    <h3 data-i18n="srv_3_title">Eficiencia EnergÃ©tica</h3>
+                    <p data-i18n="srv_3_desc">AuditorÃ­as y modernizaciÃ³n de tableros elÃ©ctricos para reducciÃ³n de
                         consumo.</p>
                 </a>
             </div>
@@ -573,7 +571,7 @@
     <section id="academy" class="section">
         <div class="container">
             <div class="section-title">
-                <h2 data-i18n="blog_title">Conocimiento Técnico</h2>
+                <h2 data-i18n="blog_title">Conocimiento TÃ©cnico</h2>
                 <div class="line"></div>
             </div>
             <div class="blog-grid">
@@ -584,7 +582,7 @@
                     <div class="blog-content">
                         <span class="blog-date">Oct 12, 2024</span>
                         <h3 data-i18n="art_1">Mantenimiento Predictivo con IA</h3>
-                        <a href="blog.html" class="read-more" data-i18n="read_more">Leer más &rarr;</a>
+                        <a href="blog.html" class="read-more" data-i18n="read_more">Leer mÃ¡s &rarr;</a>
                     </div>
                 </article>
                 <article class="blog-card">
@@ -593,8 +591,8 @@
                     </div>
                     <div class="blog-content">
                         <span class="blog-date">Sep 28, 2024</span>
-                        <h3 data-i18n="art_2">Optimización de Lodos en PTAR</h3>
-                        <a href="blog.html" class="read-more" data-i18n="read_more">Leer más &rarr;</a>
+                        <h3 data-i18n="art_2">OptimizaciÃ³n de Lodos en PTAR</h3>
+                        <a href="blog.html" class="read-more" data-i18n="read_more">Leer mÃ¡s &rarr;</a>
                     </div>
                 </article>
                 <article class="blog-card">
@@ -604,7 +602,7 @@
                     <div class="blog-content">
                         <span class="blog-date">Sep 15, 2024</span>
                         <h3 data-i18n="art_3">Nuevas Normativas ISO 50001</h3>
-                        <a href="blog.html" class="read-more" data-i18n="read_more">Leer más &rarr;</a>
+                        <a href="blog.html" class="read-more" data-i18n="read_more">Leer mÃ¡s &rarr;</a>
                     </div>
                 </article>
             </div>
@@ -620,16 +618,16 @@
             <!-- Placeholder for Gregorio's photo -->
             <div class="profile-info">
                 <h3>Ing. Gregorio Santana</h3>
-                <span class="profile-role" data-i18n="profile_role">Director de Ingeniería & I+D</span>
+                <span class="profile-role" data-i18n="profile_role">Director de IngenierÃ­a & I+D</span>
                 <p style="max-width: 600px; margin-bottom: 1.5rem; opacity: 0.8;" data-i18n="profile_bio">
-                    +11 años de experiencia liderando proyectos críticos en SINTRA, BYR y Enel. Especialista en
-                    integración de tecnologías sostenibles y automatización industrial.
+                    +11 aÃ±os de experiencia liderando proyectos crÃ­ticos en SINTRA, BYR y Enel. Especialista en
+                    integraciÃ³n de tecnologÃ­as sostenibles y automatizaciÃ³n industrial.
                 </p>
                 <div class="badges">
-                    <span>⚡ Enel</span>
-                    <span>🏗️ SINTRA</span>
-                    <span>⚙️ BYR</span>
-                    <span>🎓 +11 Años exp.</span>
+                    <span>âš¡ Enel</span>
+                    <span>ðŸ—ï¸ SINTRA</span>
+                    <span>âš™ï¸ BYR</span>
+                    <span>ðŸŽ“ +11 AÃ±os exp.</span>
                 </div>
             </div>
         </div>
