Force Add Website File

--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semhys | Ingeniería Especializada</title>
-    <style>
-        body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; background-color: #f0f2f6; }
-        iframe { width: 100%; height: 100%; border: none; }
-    </style>
+    <title>Semhys | Ingeniería</title>
+    <style>body{margin:0;overflow:hidden;background:#000}iframe{width:100%;height:100vh;border:none}</style>
 </head>
 <body>
-    <iframe src="https://tw6db9kd9k5bgwxdclommd.streamlit.app/?embed=true" title="Semhys AI"></iframe>
+    <iframe src="https://tw6db9kd9k5bgwxdclommd.streamlit.app/?embed=true"></iframe>
 </body>
 </html>
