--- a/index.html
+++ b/index.html
@@ -2,10 +2,87 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Semhys | Ingeniería</title>
-    <style>body{margin:0;overflow:hidden;background:#000}iframe{width:100%;height:100vh;border:none}</style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio - SEMHYS Ingeniería & IA</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+
+    <style>
+        /* ESTILOS DE TU DISEÑO ORIGINAL */
+        :root {
+            --color-primary: #004e92;
+            --color-secondary: #ff6b00;
+            --color-dark: #1a1a1a;
+            --color-light: #f4f4f4;
+            --font-main: 'Inter', sans-serif;
+            --transition: all 0.3s ease;
+        }
+
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { font-family: var(--font-main); color: var(--color-dark); background-color: var(--color-light); line-height: 1.8; display: flex; flex-direction: column; min-height: 100vh; }
+        a { text-decoration: none; color: inherit; transition: var(--transition); }
+
+        /* HEADER & NAV */
+        header { background: white; width: 100%; box-shadow: 0 2px 20px rgba(0, 0, 0, 0.05); }
+        .nav-container { max-width: 1200px; margin: 0 auto; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; }
+        .logo img { height: 60px; width: auto; }
+        .main-nav ul { display: flex; gap: 2rem; align-items: center; list-style: none; }
+        .main-nav a { font-weight: 500; font-size: 0.95rem; }
+        .main-nav a:hover { color: var(--color-primary); }
+
+        /* CONTENEDOR DEL CHAT */
+        .hero-section {
+            background: linear-gradient(135deg, #004e92 0%, #000428 100%);
+            color: white; padding: 2rem; text-align: center;
+        }
+        .hero-section h1 { font-size: 2.5rem; margin-bottom: 0.5rem; }
+        
+        .ai-container {
+            flex: 1; width: 100%; height: 80vh; 
+            background: white; border: none;
+        }
+        iframe { width: 100%; height: 100%; border: none; }
+
+        footer { background: #111; color: #888; padding: 2rem; text-align: center; margin-top: auto; }
+        
+        /* MÓVIL */
+        @media (max-width: 768px) { .main-nav { display: none; } }
+    </style>
 </head>
+
 <body>
-    <iframe src="https://tw6db9kd9k5bgwxdclommd.streamlit.app/?embed=true"></iframe>
+
+    <header>
+        <div class="nav-container">
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="SEMHYS" onerror="this.style.display='none'; document.querySelector('.logo-text').style.display='block'">
+                <span class="logo-text" style="display:none; font-weight:800; color:#004e92;">SEMHYS</span>
+            </a>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="index.html"><b>Inicio</b></a></li>
+                    <li><a href="water.html">Tratamiento Agua</a></li>
+                    <li><a href="energy.html">Energía</a></li>
+                    <li><a href="hydraulics.html">Hidráulica</a></li>
+                    <li><a href="shop.html" style="color:var(--color-secondary);">Tienda</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section class="hero-section">
+        <h1>Centro de Ingeniería & IA</h1>
+        <p>Asistente inteligente conectado a base de conocimiento técnico.</p>
+    </section>
+
+    <div class="ai-container">
+        <iframe src="https://tw6db9kd9k5bgwxdclommd.streamlit.app/?embed=true"></iframe>
+    </div>
+
+    <footer>
+        &copy; 2025 SEMHYS.com - Soluciones de Ingeniería Sostenible.
+    </footer>
+
 </body>
 </html>
