--- a/blog.html
+++ b/blog.html
@@ -43,11 +43,18 @@
             transition: var(--transition);
         }
 
+        ul {
+            list-style: none;
+        }
+
         /* Header */
         header {
             background: white;
             width: 100%;
             box-shadow: 0 2px 20px rgba(0, 0, 0, 0.05);
+            position: fixed;
+            top: 0;
+            z-index: 1000;
         }
 
         .nav-container {
@@ -60,8 +67,12 @@
         }
 
         .logo img {
-            height: 60px;
+            height: 50px;
             width: auto;
+            background: rgba(255, 255, 255, 0.95);
+            padding: 5px 10px;
+            border-radius: 8px;
+            transition: var(--transition);
         }
 
         /* --- Navigation --- */
@@ -144,7 +155,8 @@
         /* Blog Content */
         .container {
             margin: 0 auto;
-            padding: 5rem 2rem;
+            padding: 8rem 2rem 5rem 2rem;
+            /* Adjusted for fixed header */
         }
 
         .article {
@@ -220,9 +232,9 @@
             <nav class="main-nav" id="mainNav">
                 <ul>
                     <li><a href="index.html" onclick="toggleMenu()" data-i18n="nav_home">Inicio</a></li>
-                    <li><a href="index.html#services" onclick="toggleMenu()" data-i18n="nav_services">Servicios</a></li>
-                    <li><a href="shop.html" data-i18n="nav_shop">Tienda</a></li>
+                    <li><a href="services.html" onclick="toggleMenu()" data-i18n="nav_services">Servicios</a></li>
                     <li><a href="blog.html" data-i18n="nav_blog">Academia</a></li>
+                    <li><a href="shop.html" data-i18n="nav_shop">Tienda</a></li>
                     <li>
                         <div class="lang-selector">
                             <select id="languageSelect" onchange="changeLanguage()">
