--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             color: var(--color-dark);
             background-color: var(--color-light);
             line-height: 1.6;
-            overflow-x: hidden; /* Prevent horizontal scroll */
+            overflow-x: hidden;
+            /* Prevent horizontal scroll */
             width: 100%;
         }
 
@@ -179,12 +180,15 @@
                 box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
                 padding: 5rem 2rem;
                 transition: var(--transition);
-                transform: translateX(100%); /* Hide via transform */
-                visibility: hidden; /* Ensure it doesn't take clicks */
+                transform: translateX(100%);
+                /* Hide via transform */
+                visibility: hidden;
+                /* Ensure it doesn't take clicks */
             }
 
             .main-nav.active {
-                transform: translateX(0); /* Show via transform */
+                transform: translateX(0);
+                /* Show via transform */
                 visibility: visible;
             }
 
@@ -493,6 +497,11 @@
 
 
         /* Utilities */
+        html {
+            overflow-x: hidden;
+            width: 100%;
+        }
+
         @media (max-width: 768px) {
             .hero h1 {
                 font-size: 2.5rem;
@@ -509,7 +518,8 @@
 
             .chat-window {
                 width: 300px;
-                right: -10px;
+                right: 0;
+                /* Fixed negative positioning */
             }
         }
 
@@ -737,7 +747,7 @@
     </footer>
 
     <!-- Chat Widget Injected by script.js -->
-    <script src="script.js"></script>
+    <script src="script.js?v=1.1"></script>
 </body>
 
 </html>
