Fix invisible mobile menu text

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 
             .main-nav a {
                 font-size: 1.2rem;
+                color: var(--color-dark);
             }
 
             .menu-toggle {
